<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大同大學校園資訊系統</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="submit">登入</string>
    <string name="remembermyaccount">記住我的帳號密碼</string>
    <string name="EnterAccount">帳號</string>
    <string name="EnterPassWord">密碼</string>
    <string name="EnterVertifyCode">驗證碼(不分大小寫)</string>
    <string name="question">意見反饋</string>
    <string name="about">關於</string>
    <string name="about_title">關於</string>
    <string name="about_content">Code by JackWu\nblog:Jack玩樂誌 </string>
    <string name="logout">使用完畢按此登出</string>
    <string name="webapp">按此使用大同手機版網頁</string>

    <string name="url">http://securelogin.arubanetworks.com/cgi-bin/login</string>
	<string name="username">USERNAME</string>
	<string name="password">PASSWORD</string>
	<string name="show_password">Show password</string>
	<string name="login">Log In</string>
	<string name="ssid">ttuweb</string>
	<string name="err_ssid_msg">沒有連上ttuweb</string>
	
	
	<string-array name="params_name">
		<item>user</item>
		<item>password</item>
		<item>cmd</item>
		<item>Login</item>
	</string-array>
	<string-array name="params_value">
		<item></item>
		<item></item>
		<item>authenticate</item>
		<item>Log In</item>
	</string-array>
</resources>